[metadata]
name = pythontoolbox
version = 0.0.1
author = CatastrophiClam
author_email = jdaimax@gmail.com
description = Various python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatastrophiClam/PythonToolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src